--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "nodemon --exec mocha --recursive -R min"
+    "start": "nodemon index.js",
+    "test": "cross-env NODE_ENV=test nodemon --exec mocha --recursive -R min"
   },
   "repository": {
     "type": "git",
@@ -17,10 +18,14 @@
   },
   "homepage": "https://github.com/Hellstellar/muber#readme",
   "dependencies": {
+    "body-parser": "^1.18.3",
     "express": "^4.16.3",
     "mocha": "^5.2.0",
     "mongoose": "^5.2.7",
-    "nodemon": "^1.18.3",
     "supertest": "^3.1.0"
+  },
+  "devDependencies": {
+    "cross-env": "^5.2.0",
+    "nodemon": "^1.18.3"
   }
 }
